deploy/argo-workflow/secret-minio.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-s3-credentials
spec:
  restartPolicy: OnFailure
  volumes:
    - name: my-s3-credentials
      secret:
        secretName: my-s3-credentials
  containers:
    - name: test-my-s3-credentials
      image: registry.k8s.io/busybox
      command:
        - ls
        - "-l"
        - "/etc/secret-volume-my-s3"
      volumeMounts:
        - name: my-s3-credentials
          readOnly: true
          mountPath: "/etc/secret-volume-my-s3"
