deploy/argo-workflow/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: github-credentials
spec:
  volumes:
    - name: github-credentials
      secret:
        secretName: github-credentials
  containers:
    - name: dotfile-test-container
      image: registry.k8s.io/busybox
      command:
        - ls
        - "-l"
        - "/etc/secret-volume"
      volumeMounts:
        - name: github-credentials
          readOnly: true
          mountPath: "/etc/secret-volume"

---
apiVersion: v1
kind: Pod
metadata:
  name: github-credentials-user
spec:
  restartPolicy: OnFailure
  volumes:
    - name: github-credentials-user
      secret:
        secretName: github-credentials-user
  containers:
    - name: dotfile-test-container-user
      image: registry.k8s.io/busybox
      command:
        - ls
        - "-l"
        - "/etc/secret-volume-user"
      volumeMounts:
        - name: github-credentials-user
          readOnly: true
          mountPath: "/etc/secret-volume-user"

---
apiVersion: v1
kind: Pod
metadata:
  name: gitaccesstoken
spec:
  volumes:
    - name: gitaccesstoken
      secret:
        secretName: gitaccesstoken
  containers:
    - name: dotfile-test-container
      image: registry.k8s.io/busybox
      command:
        - ls
        - "-l"
        - "/etc/secret-volume-token"
      volumeMounts:
        - name: gitaccesstoken
          readOnly: true
          mountPath: "/etc/secret-volume-token"
