deploy/argo-workflow/webhook.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webhook-token
spec:
  restartPolicy: OnFailure
  volumes:
    - name: webhook-token
      secret:
        secretName: webhook-token
  containers:
    - name: webhook-token-test
      image: registry.k8s.io/busybox
      command:
        - ls
        - "-l"
        - "/etc/secret-volume-webhook-token"
      volumeMounts:
        - name: webhook-token
          readOnly: true
          mountPath: "/etc/secret-volume-webhook-token"
