deploy/argo-workflow/minio-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-dev
  namespace: minio-dev
spec:
  selector:
    app: minio
  ports:
    - name: minio
      protocol: TCP
      port: 9090
      targetPort: 9090
#    - name: minio-api
#      protocol: TCP
#      port: 9000
#      targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dev
  namespace: minio-dev
spec:
  ingressClassName: nginx
  rules:
    - host: my.minio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-dev
                port:
                  number: 9090
#    - host: my.minio-api.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: minio-dev
#                port:
#                  number: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: minio-dev-api
  namespace: minio-dev
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000
#    - name: minio-api
#      protocol: TCP
#      port: 9000
#      targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-svc
                port:
                  number: 5000
